arreglado idiomas y ubicacion de imagenes

--- a/front-labxpress/src/app/acerca/acerca.component.html
+++ b/front-labxpress/src/app/acerca/acerca.component.html
@@ -16,7 +16,7 @@
     <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 text-black">
         <!-- Targeta 1 -->
         <div class="bg-[#d1dde2] rounded-lg shadow-md p-5 text-center">
-            <img src="images/about-cards/_K205366.jpg" class="w-28 h-28 mx-auto rounded-full border-4 border-indigo-500">
+            <img src="assets/about-cards/mujer.png" class="w-28 h-28 mx-auto rounded-full border-4 border-indigo-500">
             <h3 class="mt-4 text-xl font-semibold">Eva Marqués</h3>
             <p class="text-indigo-900">CEO i Fundadora</p>
             <p class="text-sm mt-2">Lidera la visió estratègica i el desenvolupament de noves tecnologies a LabXpress.</p>
@@ -24,7 +24,7 @@
 
         <!-- Targeta 2 -->
         <div class="bg-[#d1dde2] rounded-lg shadow-md p-5 text-center">
-            <img src="images/about-cards/_K205366.jpg" class="w-28 h-28 mx-auto rounded-full border-4 border-indigo-500">
+            <img src="assets/about-cards/mujer.png" class="w-28 h-28 mx-auto rounded-full border-4 border-indigo-500">
             <h3 class="mt-4 text-xl font-semibold">Iona Antonia</h3>
             <p class="text-indigo-900">Directora d'Innovació</p>
             <p class="text-sm mt-2">Encargada del desenvolupament de solucions tecnològiques aplicades al laboratori.</p>
@@ -32,7 +32,7 @@
 
         <!-- Targeta 3 -->
         <div class="bg-[#d1dde2] rounded-lg shadow-md p-5 text-center">
-            <img src="images/about-cards/_K205366.jpg" class="w-28 h-28 mx-auto rounded-full border-4 border-indigo-500">
+            <img src="assets/about-cards/mujer.png" class="w-28 h-28 mx-auto rounded-full border-4 border-indigo-500">
             <h3 class="mt-4 text-xl font-semibold">Carla Wallner</h3>
             <p class="text-indigo-900">Cap d'Operacions</p>
             <p class="text-sm mt-2">Supervisa l'eficiència i qualitat dels processos al laboratori.</p>
@@ -40,7 +40,7 @@
 
         <!-- Targeta 4 -->
         <div class="bg-[#d1dde2] rounded-lg shadow-md p-5 text-center">
-            <img src="images/about-cards/_K205366.jpg" class="w-28 h-28 mx-auto rounded-full border-4 border-indigo-500">
+            <img src="assets/about-cards/mujer.png" class="w-28 h-28 mx-auto rounded-full border-4 border-indigo-500">
             <h3 class="mt-4 text-xl font-semibold">Alicia Albiach</h3>
             <p class="text-indigo-900">Gerent de Màrqueting</p>
             <p class="text-sm mt-2">Lidera l'estratègia de comunicació i creixement de l'empresa.</p>
