--- a/front-labxpress/src/app/servicios/servicios.component.html
+++ b/front-labxpress/src/app/servicios/servicios.component.html
@@ -82,53 +82,52 @@
               </div>
             </div>
           </div>
-          
-        <!-- Sección de Paquetes Personalizados y Subscripciones -->
+                  <!-- Secció de Paquets Personalitzats i Subscripcions -->
         <div class="container mx-auto md:px-4 flex flex-col items-center justify-center my-10 md:mt-20">
             <h2 class="text-4xl font-bold text-indigo-500 mb-6 px-4 md:px-0">📊 Paquets personalitzats i subscripcions</h2>
             <div class="container mx-auto px-4 flex flex-col items-center justify-center my-10 md:flex-row">
-                <!-- Plan Básico -->
+                <!-- Pla Bàsic -->
                 <div class="w-full sm:w-1/2 lg:w-1/3 md:p-4">
                     <div class="bg-[#d1dde2] text-indigo-600 rounded-lg shadow-lg p-6 h-full">
-                        <h2 class="text-2xl font-bold mb-4">💙 Plan Básico</h2>
+                        <h2 class="text-2xl font-bold mb-4">💙 Pla Bàsic</h2>
                         <p class="text-lg mb-4">19,99€ / mes</p>
-                        <p class="mb-4 text-gray-700">Este plan incluye las pruebas básicas necesarias para un chequeo general de salud.</p>
+                        <p class="mb-4 text-gray-700">Este pla inclou les proves bàsiques necessàries per a un control general de la salut.</p>
                         <ul class="mb-4 text-lg text-gray-700">
                             <li>✅ Glucosa</li>
                             <li>✅ Colesterol</li>
-                            <li>✅ Recordatorio mensual de pruebas</li>
+                            <li>✅ Recordatori mensual de proves</li>
                         </ul>
                     </div>
                 </div>
 
-                <!-- Plan Completo -->
+                <!-- Pla Complet -->
                 <div class="w-full sm:w-1/2 lg:w-1/3 md:p-4 md:mb-0 my-12">
                     <div class="bg-[#d1dde2] text-indigo-600 rounded-lg shadow-lg p-6 h-full">
-                        <h2 class="text-2xl font-bold mb-4">💜 Plan Completo</h2>
+                        <h2 class="text-2xl font-bold mb-4">💜 Pla Complet</h2>
                         <p class="text-lg mb-4">49,95€ / mes</p>
-                        <p class="mb-4 text-gray-700">Ideal para quienes buscan un seguimiento exhaustivo de su salud a largo plazo, con pruebas periódicas y asistencia continua.</p>
+                        <p class="mb-4 text-gray-700">Ideal per a qui busca un seguiment exhaustiu de la seua salut a llarg termini, amb proves periòdiques i assistència contínua.</p>
                         <ul class="mb-4 text-lg text-gray-700">
                             <li>✅ VIH</li>
-                            <li>✅ Embarazo</li>
-                            <li>✅ Alergias</li>
-                            <li>✅ Recordatorios automáticos para pruebas cada 3 meses</li>
-                            <li>✅ Seguimiento médico mensual</li>
+                            <li>✅ Embaràs</li>
+                            <li>✅ Al·lèrgies</li>
+                            <li>✅ Recordatoris automàtics per a proves cada 3 mesos</li>
+                            <li>✅ Seguiment mèdic mensual</li>
                         </ul>
                     </div>
                 </div>
 
-                <!-- Plan Empresas -->
+                <!-- Pla Empreses -->
                 <div class="w-full sm:w-1/2 lg:w-1/3 md:p-4">
                     <div class="bg-[#d1dde2] text-indigo-600 rounded-lg shadow-lg p-6 h-full">
-                        <h2 class="text-2xl font-bold mb-4">💛 Plan Empresas</h2>
-                        <p class="text-lg mb-4">Personalizado</p>
-                        <p class="mb-4 text-gray-700">Diseñado para empresas que deseen ofrecer a sus empleados pruebas periódicas de salud como parte de su bienestar corporativo.</p>
+                        <h2 class="text-2xl font-bold mb-4">💛 Pla Empreses</h2>
+                        <p class="text-lg mb-4">Personalitzat</p>
+                        <p class="mb-4 text-gray-700">Dissenyat per a empreses que vulguen oferir als seus empleats proves periòdiques de salut com a part del seu benestar corporatiu.</p>
                         <ul class="mb-4 text-lg text-gray-700">
-                            <li>✅ Contacto directo con nuestro equipo médico</li>
-                            <li>✅ Pruebas personalizadas según necesidades de la empresa</li>
-                            <li>✅ Descuentos especiales por volumen de pruebas</li>
-                            <li>✅ Seguimiento de salud para empleados</li>
-                            <li>✅ Recordatorios periódicos según calendario de empresa</li>
+                            <li>✅ Contacte directe amb el nostre equip mèdic</li>
+                            <li>✅ Proves personalitzades segons les necessitats de l’empresa</li>
+                            <li>✅ Descomptes especials per volum de proves</li>
+                            <li>✅ Seguiment de salut per als empleats</li>
+                            <li>✅ Recordatoris periòdics segons el calendari de l’empresa</li>
                         </ul>
                     </div>
                 </div>
@@ -136,7 +135,7 @@
             </div>
         </div>
 
-        <!-- Sección de Subscripción de Seguimiento Médico -->
+        <!-- Secció de Subscripció de Seguiment Mèdic -->
         <div class="container mx-auto md:px-4 flex flex-col items-center justify-center md:my-10 mb-6">
 
             <h2 class="text-4xl font-bold text-indigo-500 mb-6 px-4 md:px-0">📅 Subscripció de Seguiment Mèdic</h2>
@@ -145,22 +144,22 @@
                 <div class="bg-[#d1dde2] text-indigo-600 rounded-lg shadow-lg p-6 h-full">
                     <h3 class="text-2xl font-bold mb-4">📋 Subscripció de Seguiment Mèdic</h3>
                     <p class="text-xl mb-4">15,99€ / mes</p>
-                    <p class="mb-4 text-gray-700">Este servicio ofrece un seguimiento continuado de tu salud, con consultas periódicas y recordatorios de pruebas médicas.</p>
+                    <p class="mb-4 text-gray-700">Este servei ofereix un seguiment continuat de la teua salut, amb consultes periòdiques i recordatoris de proves mèdiques.</p>
                     <ul class="mb-4 text-lg text-gray-700">
-                        <li>✅ Consultas médicas telefónicas cada 3 meses</li>
-                        <li>✅ Recordatorios de pruebas periódicas</li>
-                        <li>✅ Informe de salud anual personalizado</li>
-                        <li>✅ Asesoramiento para prevención de enfermedades</li>
+                        <li>✅ Consultes mèdiques telefòniques cada 3 mesos</li>
+                        <li>✅ Recordatoris de proves periòdiques</li>
+                        <li>✅ Informe de salut anual personalitzat</li>
+                        <li>✅ Assessorament per a la prevenció de malalties</li>
                     </ul>
                 </div>
             </div>
         </div>
 
-<!-- Contenedor para faqs-->
+<!-- Contenidor per a preguntes freqüents -->
         <div class="p-6 w-full mx-auto flex flex-col md:w-[90%]">
-            <!-- Título de las FAQ -->
+            <!-- Títol de les FAQ -->
             <h2 class="md:text-4xl font-bold text-indigo-500 flex items-center mb-6 text-3xl">
-                ❓ FAQ | Preguntas Frecuentes
+                ❓ FAQ | Preguntes Freqüents
             </h2>
 
                 <p-accordion [multiple]="true" [value]="activeIndexes" class="">
