--- a/front-labxpress/src/app/inicio/inicio.component.html
+++ b/front-labxpress/src/app/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 
-<div class="cuerpo">
+<div class="cuerpo min-h-screen">
 
     <app-menu></app-menu>
 
@@ -243,9 +243,8 @@
             </ng-template>
         </p-carousel>
     </div>
-
-    <footer class="bg-[#d1dde2] text-gray-700 text-center p-4 fixed bottom-0 w-full">
-        <p class="text-sm md:text-base">&copy; 2025 LabXpress. Tots els drets reservats.</p>
-    </footer> 
-
 </div>
+
+<footer class="bg-[#d1dde2] text-gray-700 text-center p-4 w-full mt-auto">
+    <p class="text-sm md:text-base">&copy; 2025 LabXpress. Tots els drets reservats.</p>
+</footer> 
