--- a/front-labxpress/src/app/menu/menu.component.sass
+++ b/front-labxpress/src/app/menu/menu.component.sass
@@ -82,7 +82,7 @@ $font-color: #c2cccf
   .hamburger
     display: block
     position: absolute
-    top: 20px    // Ajusta la posición de la "X" dentro del menú
+    top: 0  // Ajusta la posición de la "X" dentro del menú
     right: 20px   // Deja algo de margen para no estar pegado al borde
     font-size: 40px   // Aumenta el tamaño de la "X" si es necesario
     z-index: 2
